--- a/server/Pipfile
+++ b/server/Pipfile
@@ -2,7 +2,11 @@
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 
+[dev-packages]
+django-debug-toolbar = "*"
+
 [packages]
 requests = "*"
-Django = "*"
+django = "*"
 djangorestframework = "*"
+drf-nested-routers = "*"
