--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "buefy": "^0.4.6",
     "nuxt": "latest"
   },
   "scripts": {
