--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,17 @@
   "author": "Ilya Monakov <imonakov@gmail.com>",
   "private": true,
   "dependencies": {
+    "@nuxtjs/axios": "^3.0.1",
     "@nuxtjs/proxy": "^1.1.1",
-    "axios": "^0.16.2",
     "buefy": "^0.4.6",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "nuxt": "latest"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0"
+    }
   },
   "scripts": {
     "dev": "nuxt",
