--- a/server/Pipfile
+++ b/server/Pipfile
@@ -9,4 +9,5 @@ django-debug-toolbar = "*"
 requests = "*"
 djangorestframework = "*"
 drf-nested-routers = "*"
-Django = "*"
+django = "*"
+django-filter = "*"
