--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^3.0.1",
     "@nuxtjs/proxy": "^1.1.1",
-    "buefy": "^0.4.6",
+    "buefy": "^0.5.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "nuxt": "latest"
@@ -32,6 +32,8 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint-plugin-standard": "^2.0.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6"
   }
 }
