--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,3 +11,5 @@ djangorestframework = "*"
 drf-nested-routers = "*"
 django = "*"
 django-filter = "*"
+django-rest-auth = "*"
+djangorestframework-jwt = "*"
