--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@nuxtjs/proxy": "^1.1.1",
     "buefy": "^0.5.0",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^2.1.4",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "nuxt": "latest"
   },
