--- a/client-nuxt/package.json
+++ b/client-nuxt/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^3.0.1",
     "@nuxtjs/proxy": "^1.1.1",
-    "buefy": "^0.5.0",
+    "buefy": "latest",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.1.4",
     "jwt-decode": "^2.2.0",
