--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "vue": "^2.4.4",
+    "vue-meta": "^1.2.0",
     "vue-router": "^2.6.0",
     "vuex": "^2.4.0"
   },
