--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
         - pip install pipenv
       install:
         - pipenv install
+      script:
+        - pipenv check
 
     - language: nodejs
       node_js:
