vue cli v3 migration

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,5 +13,5 @@ django-filter = "*"
 django-rest-auth = "*"
 djangorestframework-jwt = "*"
 Django = "*"
-psycopg2 = "*"
 gunicorn = "*"
+"psycopg2-binary" = "*"
