--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,11 @@
 {
   "name": "mahjong_statboard",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "Ilya Monakov <imonakov@hostcomm.ru>",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -24,54 +21,12 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.6",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.26.0",
-    "chalk": "^2.3.2",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.10",
-    "cssnano": "^3.10.0",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
-    "node-sass": "^4.8.1",
-    "opn": "^5.2.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.4.0",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.7",
-    "semver": "^5.5.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.7.1",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.5.15",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-merge": "^4.1.2"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.0.0-beta.15",
+    "node-sass": "^4.9.1",
+    "sass-loader": "^7.0.3",
+    "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
     "> 1%",
