--- a/client/package.json
+++ b/client/package.json
@@ -15,18 +15,20 @@
     "js-cookie": "^2.1.4",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
-    "vue": "^2.5.15",
+    "vue": "^2.5.17",
     "vue-meta": "^1.4.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "node-sass": "^4.9.1",
-    "sass-loader": "^7.0.3",
-    "vue-template-compiler": "^2.5.16"
+    "@vue/cli-plugin-babel": "^3.0.0-rc.10",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
+    "@vue/cli-service": "^3.0.0-rc.10",
+    "glob-all": "^3.1.0",
+    "node-sass": "^4.9.2",
+    "purgecss-webpack-plugin": "^1.2.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "browserslist": [
     "> 1%",
