--- a/server/Pipfile
+++ b/server/Pipfile
@@ -9,7 +9,7 @@ django-debug-toolbar = "*"
 requests = "*"
 djangorestframework = "*"
 drf-nested-routers = "*"
-django-filter = "*"
+django-filter = "<2.0"
 django-rest-auth = "*"
 djangorestframework-jwt = "*"
 Django = "*"
